seaqt/QtWidgets/gen_qgroupbox.h

class QChildEvent;
class QEvent;
class QFocusEvent;
class QGroupBox;
class QMetaObject;
class QPaintEvent;
class QResizeEvent;
class QSize;
class QWidget;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QGroupBox QGroupBox;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QResizeEvent QResizeEvent;
typedef struct QSize QSize;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
bool QGroupBox_override_virtual_initPainter(void* self, intptr_t slot);
bool QGroupBox_override_virtual_redirected(void* self, intptr_t slot);
QPaintDevice* QGroupBox_virtualbase_redirected(const void* self, QPoint* offset);
bool QGroupBox_override_virtual_sharedPainter(void* self, intptr_t slot);
QPainter* QGroupBox_virtualbase_sharedPainter(const void* self);
bool QGroupBox_override_virtual_inputMethodEvent(void* self, intptr_t slot);
void QGroupBox_virtualbase_inputMethodEvent(void* self, QInputMethodEvent* param1);
bool QGroupBox_override_virtual_inputMethodQuery(void* self, intptr_t slot);
QVariant* QGroupBox_virtualbase_inputMethodQuery(const void* self, int param1);
bool QGroupBox_override_virtual_focusNextPrevChild(void* self, intptr_t slot);
bool QGroupBox_virtualbase_focusNextPrevChild(void* self, bool next);
bool QGroupBox_override_virtual_eventFilter(void* self, intptr_t slot);
bool QGroupBox_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QGroupBox_override_virtual_timerEvent(void* self, intptr_t slot);
void QGroupBox_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QGroupBox_override_virtual_customEvent(void* self, intptr_t slot);
void QGroupBox_virtualbase_customEvent(void* self, QEvent* event);
bool QGroupBox_override_virtual_connectNotify(void* self, intptr_t slot);
void QGroupBox_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QGroupBox_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QGroupBox_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
void QGroupBox_delete(QGroupBox* self);