seaqt/QtWidgets/gen_qgroupbox.nim

proc fcQGroupBox_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_initPainter".}
proc fQGroupBox_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QGroupBox_virtualbase_redirected".}
proc fcQGroupBox_override_virtual_redirected(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_redirected".}
proc fQGroupBox_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QGroupBox_virtualbase_sharedPainter".}
proc fcQGroupBox_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_sharedPainter".}
proc fQGroupBox_virtualbase_inputMethodEvent(self: pointer, param1: pointer): void{.importc: "QGroupBox_virtualbase_inputMethodEvent".}
proc fcQGroupBox_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_inputMethodEvent".}
proc fQGroupBox_virtualbase_inputMethodQuery(self: pointer, param1: cint): pointer{.importc: "QGroupBox_virtualbase_inputMethodQuery".}
proc fcQGroupBox_override_virtual_inputMethodQuery(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_inputMethodQuery".}
proc fQGroupBox_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool{.importc: "QGroupBox_virtualbase_focusNextPrevChild".}
proc fcQGroupBox_override_virtual_focusNextPrevChild(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_focusNextPrevChild".}
proc fQGroupBox_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QGroupBox_virtualbase_eventFilter".}
proc fcQGroupBox_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_eventFilter".}
proc fQGroupBox_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QGroupBox_virtualbase_timerEvent".}
proc fcQGroupBox_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_timerEvent".}
proc fQGroupBox_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QGroupBox_virtualbase_customEvent".}
proc fcQGroupBox_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_customEvent".}
proc fQGroupBox_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QGroupBox_virtualbase_connectNotify".}
proc fcQGroupBox_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_connectNotify".}
proc fQGroupBox_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QGroupBox_virtualbase_disconnectNotify".}
proc fcQGroupBox_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_disconnectNotify".}
proc fcQGroupBox_delete(self: pointer) {.importc: "QGroupBox_delete".}


func init*(T: type gen_qgroupbox_types.QGroupBox, h: ptr cQGroupBox): gen_qgroupbox_types.QGroupBox =
  T(h: h)
proc create*(T: type gen_qgroupbox_types.QGroupBox, parent: gen_qwidget_types.QWidget): gen_qgroupbox_types.QGroupBox =
  gen_qgroupbox_types.QGroupBox.init(fcQGroupBox_new(parent.h))

proc create*(T: type gen_qgroupbox_types.QGroupBox, ): gen_qgroupbox_types.QGroupBox =
  gen_qgroupbox_types.QGroupBox.init(fcQGroupBox_new2())

proc create*(T: type gen_qgroupbox_types.QGroupBox, title: string): gen_qgroupbox_types.QGroupBox =
  gen_qgroupbox_types.QGroupBox.init(fcQGroupBox_new3(struct_miqt_string(data: title, len: csize_t(len(title)))))

proc create*(T: type gen_qgroupbox_types.QGroupBox, title: string, parent: gen_qwidget_types.QWidget): gen_qgroupbox_types.QGroupBox =
  gen_qgroupbox_types.QGroupBox.init(fcQGroupBox_new4(struct_miqt_string(data: title, len: csize_t(len(title))), parent.h))

proc metaObject*(self: gen_qgroupbox_types.QGroupBox, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQGroupBox_metaObject(self.h))

proc metacast*(self: gen_qgroupbox_types.QGroupBox, param1: cstring): pointer =
  fcQGroupBox_metacast(self.h, param1)

proc tr*(_: type gen_qgroupbox_types.QGroupBox, s: cstring): string =
  let v_ms = fcQGroupBox_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc title*(self: gen_qgroupbox_types.QGroupBox, ): string =
  let v_ms = fcQGroupBox_title(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setTitle*(self: gen_qgroupbox_types.QGroupBox, title: string): void =
  fcQGroupBox_setTitle(self.h, struct_miqt_string(data: title, len: csize_t(len(title))))

proc alignment*(self: gen_qgroupbox_types.QGroupBox, ): cint =
  cint(fcQGroupBox_alignment(self.h))

proc setAlignment*(self: gen_qgroupbox_types.QGroupBox, alignment: cint): void =
  fcQGroupBox_setAlignment(self.h, alignment)

proc minimumSizeHint*(self: gen_qgroupbox_types.QGroupBox, ): gen_qsize_types.QSize =
  gen_qsize_types.QSize(h: fcQGroupBox_minimumSizeHint(self.h))

proc isFlat*(self: gen_qgroupbox_types.QGroupBox, ): bool =
  fcQGroupBox_isFlat(self.h)

proc setFlat*(self: gen_qgroupbox_types.QGroupBox, flat: bool): void =
  fcQGroupBox_setFlat(self.h, flat)

proc isCheckable*(self: gen_qgroupbox_types.QGroupBox, ): bool =
  fcQGroupBox_isCheckable(self.h)

proc setCheckable*(self: gen_qgroupbox_types.QGroupBox, checkable: bool): void =
  fcQGroupBox_setCheckable(self.h, checkable)

proc isChecked*(self: gen_qgroupbox_types.QGroupBox, ): bool =
  fcQGroupBox_isChecked(self.h)

proc setChecked*(self: gen_qgroupbox_types.QGroupBox, checked: bool): void =
  fcQGroupBox_setChecked(self.h, checked)

proc clicked*(self: gen_qgroupbox_types.QGroupBox, ): void =
  fcQGroupBox_clicked(self.h)

type QGroupBoxclickedSlot* = proc()
proc miqt_exec_callback_QGroupBox_clicked(slot: int) {.exportc.} =
  let nimfunc = cast[ptr QGroupBoxclickedSlot](cast[pointer](slot))
  nimfunc[]()

proc onclicked*(self: gen_qgroupbox_types.QGroupBox, slot: QGroupBoxclickedSlot) =
  var tmp = new QGroupBoxclickedSlot
  tmp[] = slot
  GC_ref(tmp)
  fcQGroupBox_connect_clicked(self.h, cast[int](addr tmp[]))

proc toggled*(self: gen_qgroupbox_types.QGroupBox, param1: bool): void =
  fcQGroupBox_toggled(self.h, param1)

type QGroupBoxtoggledSlot* = proc(param1: bool)
proc miqt_exec_callback_QGroupBox_toggled(slot: int, param1: bool) {.exportc.} =
  let nimfunc = cast[ptr QGroupBoxtoggledSlot](cast[pointer](slot))
  let slotval1 = param1

  nimfunc[](slotval1)

proc ontoggled*(self: gen_qgroupbox_types.QGroupBox, slot: QGroupBoxtoggledSlot) =
  var tmp = new QGroupBoxtoggledSlot
  tmp[] = slot
  GC_ref(tmp)
  fcQGroupBox_connect_toggled(self.h, cast[int](addr tmp[]))

proc tr*(_: type gen_qgroupbox_types.QGroupBox, s: cstring, c: cstring): string =
  let v_ms = fcQGroupBox_tr2(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc tr*(_: type gen_qgroupbox_types.QGroupBox, s: cstring, c: cstring, n: cint): string =
  let v_ms = fcQGroupBox_tr3(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc clicked*(self: gen_qgroupbox_types.QGroupBox, checked: bool): void =
  fcQGroupBox_clicked1(self.h, checked)

type QGroupBoxclicked1Slot* = proc(checked: bool)
proc miqt_exec_callback_QGroupBox_clicked1(slot: int, checked: bool) {.exportc.} =
  let nimfunc = cast[ptr QGroupBoxclicked1Slot](cast[pointer](slot))
  let slotval1 = checked

  nimfunc[](slotval1)

proc onclicked*(self: gen_qgroupbox_types.QGroupBox, slot: QGroupBoxclicked1Slot) =
  var tmp = new QGroupBoxclicked1Slot
  tmp[] = slot
  GC_ref(tmp)
  fcQGroupBox_connect_clicked1(self.h, cast[int](addr tmp[]))

proc QGroupBoxminimumSizeHint*(self: gen_qgroupbox_types.QGroupBox, ): gen_qsize_types.QSize =
  gen_qsize_types.QSize(h: fQGroupBox_virtualbase_minimumSizeHint(self.h))

type QGroupBoxminimumSizeHintProc* = proc(): gen_qsize_types.QSize
proc onminimumSizeHint*(self: gen_qgroupbox_types.QGroupBox, slot: QGroupBoxminimumSizeHintProc) =
  # TODO check subclass
  var tmp = new QGroupBoxminimumSizeHintProc
  tmp[] = slot
  GC_ref(tmp)
  fcQGroupBox_override_virtual_minimumSizeHint(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QGroupBox_minimumSizeHint(self: ptr cQGroupBox, slot: int): pointer {.exportc: "miqt_exec_callback_QGroupBox_minimumSizeHint ".} =
  var nimfunc = cast[ptr QGroupBoxminimumSizeHintProc](cast[pointer](slot))

  let virtualReturn = nimfunc[]( )

  virtualReturn.h
proc QGroupBoxevent*(self: gen_qgroupbox_types.QGroupBox, event: gen_qcoreevent_types.QEvent): bool =
  fQGroupBox_virtualbase_event(self.h, event.h)

type QGroupBoxeventProc* = proc(event: gen_qcoreevent_types.QEvent): bool
proc onevent*(self: gen_qgroupbox_types.QGroupBox, slot: QGroupBoxeventProc) =
  # TODO check subclass
  var tmp = new QGroupBoxeventProc
  tmp[] = slot
  GC_ref(tmp)
  fcQGroupBox_override_virtual_event(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QGroupBox_event(self: ptr cQGroupBox, slot: int, event: pointer): bool {.exportc: "miqt_exec_callback_QGroupBox_event ".} =
  var nimfunc = cast[ptr QGroupBoxeventProc](cast[pointer](slot))
  let slotval1 = gen_qcoreevent_types.QEvent(h: event)


  let virtualReturn = nimfunc[](slotval1 )

  virtualReturn
proc QGroupBoxchildEvent*(self: gen_qgroupbox_types.QGroupBox, event: gen_qcoreevent_types.QChildEvent): void =
  fQGroupBox_virtualbase_childEvent(self.h, event.h)

type QGroupBoxchildEventProc* = proc(event: gen_qcoreevent_types.QChildEvent): void
proc onchildEvent*(self: gen_qgroupbox_types.QGroupBox, slot: QGroupBoxchildEventProc) =
  # TODO check subclass
  var tmp = new QGroupBoxchildEventProc
  tmp[] = slot
  GC_ref(tmp)
  fcQGroupBox_override_virtual_childEvent(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QGroupBox_childEvent(self: ptr cQGroupBox, slot: int, event: pointer): void {.exportc: "miqt_exec_callback_QGroupBox_childEvent ".} =
  var nimfunc = cast[ptr QGroupBoxchildEventProc](cast[pointer](slot))
  let slotval1 = gen_qcoreevent_types.QChildEvent(h: event)


  nimfunc[](slotval1)
proc QGroupBoxresizeEvent*(self: gen_qgroupbox_types.QGroupBox, event: gen_qevent_types.QResizeEvent): void =
  fQGroupBox_virtualbase_resizeEvent(self.h, event.h)

type QGroupBoxresizeEventProc* = proc(event: gen_qevent_types.QResizeEvent): void
proc onresizeEvent*(self: gen_qgroupbox_types.QGroupBox, slot: QGroupBoxresizeEventProc) =
  # TODO check subclass
  var tmp = new QGroupBoxresizeEventProc
  tmp[] = slot
  GC_ref(tmp)
  fcQGroupBox_override_virtual_resizeEvent(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QGroupBox_resizeEvent(self: ptr cQGroupBox, slot: int, event: pointer): void {.exportc: "miqt_exec_callback_QGroupBox_resizeEvent ".} =
  var nimfunc = cast[ptr QGroupBoxresizeEventProc](cast[pointer](slot))
  let slotval1 = gen_qevent_types.QResizeEvent(h: event)


  nimfunc[](slotval1)
proc QGroupBoxpaintEvent*(self: gen_qgroupbox_types.QGroupBox, event: gen_qevent_types.QPaintEvent): void =
  fQGroupBox_virtualbase_paintEvent(self.h, event.h)

type QGroupBoxpaintEventProc* = proc(event: gen_qevent_types.QPaintEvent): void
proc onpaintEvent*(self: gen_qgroupbox_types.QGroupBox, slot: QGroupBoxpaintEventProc) =
  # TODO check subclass
  var tmp = new QGroupBoxpaintEventProc
  tmp[] = slot
  GC_ref(tmp)
  fcQGroupBox_override_virtual_paintEvent(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QGroupBox_paintEvent(self: ptr cQGroupBox, slot: int, event: pointer): void {.exportc: "miqt_exec_callback_QGroupBox_paintEvent ".} =
  var nimfunc = cast[ptr QGroupBoxpaintEventProc](cast[pointer](slot))
  let slotval1 = gen_qevent_types.QPaintEvent(h: event)


  nimfunc[](slotval1)
proc QGroupBoxfocusInEvent*(self: gen_qgroupbox_types.QGroupBox, event: gen_qevent_types.QFocusEvent): void =
  fQGroupBox_virtualbase_focusInEvent(self.h, event.h)
